# ollama_for_pretty_graph

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  trait_impl.rs  traits.rs
src/client/: blocking.rs  mod.rs
src/execute/: blocking.rs
src/private/: constants.rs  mod.rs
src/private/execute/: blocking.rs
src/private/structs/: mod.rs  model_response.rs  msg.rs  prompt.rs
src/private/traits/impls/: get_useful_fields.rs  mod.rs
src/private/traits/traits/: get_useful_fields.rs  mod.rs
src/public/: constants.rs  mod.rs
src/public/structs/: config.rs
src/public/traits/: mod.rs
src/public/traits/impls/: mod.rs  ollama_for_pretty_graph.rs  rag.rs
src/public/traits/traits/: mod.rs  ollama_for_pretty_graph.rs  rag.rs
