[package]
name = "ollama_for_pretty_graph"
version = "0.3.2"
edition = "2024"
license = "MIT"
authors = ["Glab Strizhkov glabstrizhkov@gmail.com"]
documentation = "https://docs.rs/ollama_for_pretty_graph"
readme = "README.md"
homepage = "https://github.com/glabSdr/ollama_for_pretty_graph"
repository = "https://github.com/glabSdr/ollama_for_pretty_graph"
description = "This crate provide basic access to ollama api for systems based on pretty_graph"
keywords = ["graph", "ai"]

[dependencies]
pretty_graph = "0.8.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
